syntax = "proto3";

option csharp_namespace = "NambaDoctor.Proto.v1";

package nambadoctor.v1;

service DoctorWorkerv1 {
	rpc GetDoctor (DoctorRequest) returns (DoctorResponse);
	rpc UpsertDoctor(DoctorResponse) returns (DoctorResponse);
	rpc GetAllDoctors(PatientsRequestForMultipleDoctors) returns (GroupOfDoctors);
	rpc GetPatientsDoctor(PatientsRequestForSingleDoctor) returns (DoctorResponse);
}

message GroupOfDoctors{
    repeated DoctorResponse doctorResponse= 1;
}

message DoctorResponse {
    string DoctorId = 1;
    string FullName = 2;
    string LoginPhoneNumber = 3;
    string ProfilePic = 4;
    int64 CreatedDateTime = 5;
    int32 ConsultationFee = 6;
    string RegistrationNumber = 7;
    repeated string Specialities = 8;
    repeated string Languages = 9;
    string DeviceTokenId = 10;
    string UPIId = 11;
    repeated DoctorsContactInfo ContactInfos = 12;
    repeated DoctorsEducationInfo EducationInfos = 13;
    repeated DoctorsExperience Experiences = 14;
    LatestSlot latestSlot = 15;
}

message DoctorsContactInfo {
    string ZipCode = 1;
    string PhoneNumber = 2;
    string EmailId = 3;
    string StreetAddress = 4;
}

message DoctorsEducationInfo {
        string CollegeName = 1;
        string Course = 2;
        int32 YearPassed = 3;
}

message DoctorsExperience {
        bool CurrentlyWorking = 1;
        int64 StartDateTime = 2;
        int64 EndDateTime = 3;
        string Company = 4;
}

message DoctorRequest {
	string doctorId = 1;
}

message LatestSlot {
    string Id = 1;
    string DoctorId = 2;
    string BookedBy = 3;
    int32 Duration = 4;
    int64 StartDateTime = 5;
    string Status = 6;
    int64 CreatedDateTime = 7;
}

message PatientsRequestForMultipleDoctors{
    string PatientId = 1;
}

message PatientsRequestForSingleDoctor{
    string PatientId = 1;
    string DoctorId = 2;
}